# Clearpath_Ridgeback_Motion_Server

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml  test.ipynb
config/: autonomy_params.yaml  fastrtps_jetson.xml  fastrtps_profile.xml  fastrtps_ridgeback.xml  nav2_params.yaml  slam_params.yaml  vslam_params.yaml
docs/: experiment_plan.md
ridgeback_autonomy/: .env.example  .gitignore  CMakeLists.txt  package.xml  setup.py
ridgeback_autonomy/config/: nav2_params.yaml  safety_params.yaml  slam_toolbox_params.yaml  vlm_config.yaml
ridgeback_autonomy/launch/: autonomy.launch.py  safety.launch.py  simulation.launch.py  slam_nav.launch.py
ridgeback_autonomy/msg/: MissionStatus.msg  Perception.msg  SafetyStatus.msg
ridgeback_autonomy/ridgeback_autonomy/: cmd_vel_mux.py  exploration.py  mission_orchestrator.py  safety_controller.py  sim_topic_bridge.py  spatial_memory.py  vlm_perception.py  web_dashboard.py
ridgeback_autonomy/scripts/: autonomy_start.sh  docker_sim.sh  safety_only.sh
ridgeback_autonomy/srv/: GetAllLocations.srv  MissionCommand.srv  QueryLocation.srv  StoreLocation.srv
ridgeback_autonomy/worlds/: office_floor.world
ridgeback_image_motion/: .env.example  autonomy_common.py  cmd_vel_mux.py  frontier_explorer.py  image_publisher.py  jetson_watchdog.py  mission_orchestrator.py  motion_server.py  room_detector.py  safety_controller.py  safety_policy.py  spatial_memory.py  vlm_client.py  web_controller.py  web_dashboard.py
ridgeback_image_motion/launch/: autonomy.launch.py
scripts/: generate_fastrtps_profile.py  ridgeback_clock_check.sh  ridgeback_start.sh  ridgeback_web.sh  vlm_explore_test.sh
sim/: .env.example  README.md
sim/config/: mock_vlm_fixtures.yaml  sim_chaos.yaml
sim/docker/: Dockerfile.autonomy  Dockerfile.gazebo  Dockerfile.mock_vlm  docker-compose.yml
sim/launch/: sim.launch.py
sim/mock_vlm/: server.py
sim/scripts/: mac_setup.sh  sim_benchmark.sh  sim_down.sh  sim_mission.sh  sim_up.sh
sim/tests/: test_full_mission.py
sim/worlds/: corridor.world  floor.world  small_room.world
srv/: Motion.srv
test/: conftest.py  test_goal_requirements.py  test_launch_and_config.py  test_mission_logic.py  test_safety_controller_policy.py  test_static_repo_contracts.py  test_vlm_and_room_detection.py
